# openresearch-cli

./: .gitignore  .port-workflow.mjs  Cargo.toml  README.md  SKILL.md  SYSTEM_PROMPT.md  dist-workspace.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release-on-bump.yml  tag-release.yml
agent-skills/: compute-k8s.md  compute.md  create.md  evidence-cloud.md  evidence-local.md  experiment-tree.md  git-editing.md  lit.md  reports-cloud.md  reports-local.md
agent-skills/orx-compute/: SKILL.local.md  SKILL.md
agent-skills/orx-compute-k8s/: SKILL.md
agent-skills/orx-create/: SKILL.md
agent-skills/orx-evidence/: SKILL.local.md  SKILL.md
agent-skills/orx-experiment-tree/: SKILL.local.md  SKILL.md
agent-skills/orx-git/: SKILL.md
agent-skills/orx-lit/: SKILL.md
agent-skills/orx-reports/: SKILL.local.md  SKILL.md
src/: browser.rs  browser.ts  client.rs  client.ts  config.rs  config.ts  error.rs  index.ts  main.rs  output.rs  plane.rs  remote.rs  store.rs  table.ts  telemetry.rs  updates.rs
src/commands/: artifact.rs  artifact.ts  artifacts.rs  cat.rs  cat.ts  chart.rs  chart.ts  compute.rs  create-experiment.ts  create_experiment.rs  create_project.rs  dev.rs  dev.ts  diff.rs  env.rs  exp.rs  experiments.rs  experiments.ts  explore.rs  fs.rs  fs.ts  hook_approve.rs  install_skills.rs  instance.rs  lit.rs  login.rs  login.ts  logout.rs  logout.ts  logs.rs  logs.ts  mcp_gate.rs  mod.rs  paper.rs  plan_gate.rs  project.rs  projects.rs  projects.ts  query.rs  (+20 more)
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+88 files in other folders)
