[package]
name = "openresearch-cli"
version = "0.1.0"
edition = "2021"
description = "OpenResearch CLI (orx) — Rust port"

[[bin]]
name = "orx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
