[package]
name = "openresearch-cli"
version = "0.1.16"
edition = "2021"
description = "OpenResearch CLI (orx) — Rust port"
repository = "https://github.com/alphaXiv/openresearch-cli"
license = "MIT"

[[bin]]
name = "orx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "fs"] }
# rustls instead of the default native-tls: avoids an OpenSSL dependency so the
# static musl Linux builds link cleanly (native-tls/openssl won't build for musl).
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
semver = "1"
fd-lock = "4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
